--- a/BookLoop/package.json
+++ b/BookLoop/package.json
@@ -10,12 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
     "axios": "^1.6.8",
     "nuxt": "^3.11.2",
+    "pinia": "^2.1.7",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
