--- a/BookLoop/package.json
+++ b/BookLoop/package.json
@@ -10,17 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "^1.4.2",
     "@pinia/nuxt": "^0.5.1",
     "axios": "^1.6.8",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
-    "vue": "^3.4.27",
+    "vue": "latest",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.0"
-  },
-  "overrides": {
-    "vue": "latest"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
