almost finished work addition logic

--- a/BookLoop/package.json
+++ b/BookLoop/package.json
@@ -13,6 +13,9 @@
     "@nuxtjs/dotenv": "^1.4.2",
     "@pinia/nuxt": "^0.5.1",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
+    "flowbite": "^2.3.0",
+    "js-datepicker": "^5.18.2",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "vue": "latest",
