--- a/BookLoop/package.json
+++ b/BookLoop/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/dotenv": "^1.4.2",
     "@pinia/nuxt": "^0.5.1",
+    "axios": "^1.7.2",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.27",
