--- a/BookLoop/package.json
+++ b/BookLoop/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.0"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0"
   }
 }
