--- a/BookLoop/package.json
+++ b/BookLoop/package.json
@@ -16,6 +16,7 @@
     "@pinia/nuxt": "^0.5.1",
     "axios": "^1.7.2",
     "flowbite": "^2.3.0",
+    "flowbite-datepicker": "^1.2.6",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.27",
