--- a/BookLoop/package.json
+++ b/BookLoop/package.json
@@ -21,6 +21,7 @@
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.27",
+    "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
